--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Kanit&family=Prompt&display=swap');
+
+
 @layer base {
     h1 {
         @apply text-4xl;
